deploy/k8s/airlock-system/injection-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: airlock-sidecar-injector
  labels:
    app.kubernetes.io/name: airlock-control-plane
    app.kubernetes.io/part-of: airlock
webhooks:
  - name: sidecar-injector.airlock.dev
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Fail
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        airlock.dev/injection: enabled
    objectSelector:
      matchLabels:
        airlock.dev/enabled: "true"
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: Namespaced
    clientConfig:
      service:
        name: airlock-control-plane
        namespace: airlock-system
        path: /mutate/v1/pods
        port: 9443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR0akNDQXA2Z0F3SUJBZ0lVZWhqTjVCY3hWeWhucXlmZ2E0ZnVpMjFqRFVFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd016RXhNQzhHQTFVRUF3d29ZV2x5Ykc5amF5MWpiMjUwY205c0xYQnNZVzVsTG1GcGNteHZZMnN0YzNsegpkR1Z0TG5OMll6QWVGdzB5TmpBMk1URXlNVFU1TVRCYUZ3MHpOakEyTURneU1UVTVNVEJhTURNeE1UQXZCZ05WCkJBTU1LR0ZwY214dlkyc3RZMjl1ZEhKdmJDMXdiR0Z1WlM1aGFYSnNiMk5yTFhONWMzUmxiUzV6ZG1Nd2dnRWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDZjA0cXY0OXhKS2E2aUNZVmUzT01XL3ZHeQpNeHVoUG5TZjB5 [...]
